<resources>
    <string name="app_name">Trueque Libre</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_buscar">Buscar</string>
    <string name="title_trueques">Trueques</string>
    <string name="title_notificationes">Notificationes</string>
    <string name="title_mi_perfil">Mi perfil</string>
    <string name="title_publicaciones">Publicaciones</string>

    <string name="btn_agregar_publicacion">Agregar Publicaciones +</string>
    <string name="txt_mis_publicacion">Mis Publicaciones</string>
    <string name="tv_publicar_articulo">Publicar Artículo/Servicio</string>
    <string name="btn_agregar_imagenes_publicacion">Agregar Imagen</string>
    <string name="tv_imagenes_agregar_publicacion">Imágenes</string>
    <string name="tv_categoria_agregar_publicacion">Categoría</string>
    <string name="tv_categoria_pretendida_agregar_publicacion">Categoría Pretendida</string>
    <string name="tv_titulo_agregar_publicacion">Título</string>
    <string name="tv_descripcion_agregar_publicacion">Descripción</string>
    <string name="tv_condicion_agregar_publicacion">Condición</string>
    <string name="tv_ubicacion_agregar_publicacion">Ubicación</string>
    <string name="tv_ubicacion_pretendida_agregar_publicacion">Ubicación Pretendida</string>
    <string name="btn_publicar_agregar_publicacion">Publicar</string>

    <string name="btn_editar_publicacion">Editar</string>
    <string name="tv_editar_articulo">Editar Artículo/Servicio</string>
    <string name="btn_editar_imagenes_publicacion">Editar Imágen</string>
    <string name="tv_imagenes_editar_publicacion">Imágenes</string>
    <string name="tv_categoria_editar_publicacion">Categoría</string>
    <string name="tv_categoria_pretendida_editar_publicacion">Categoría Pretendida</string>
    <string name="tv_titulo_editar_publicacion">Título</string>
    <string name="tv_descripcion_editar_publicacion">Descripción</string>
    <string name="tv_condicion_editar_publicacion">Condición</string>
    <string name="tv_ubicacion_editar_publicacion">Ubicación</string>
    <string name="tv_ubicacion_pretendida_editar_publicacion">Ubicación Pretendida</string>
    <string name="et_comentario">Comentario</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvTruequeLibre">Trueque Libre</string>
    <string name="tvRegistrarse">Para registrarse complete los siguientes datos.</string>
    <string name="tvIniciarSesion">Ingrese sus credenciales.</string>
    <string name="txtUsuario">Correo electrónico</string>
    <string name="txtContrasenia">Contraseña</string>
    <string name="btnLogin">INICIAR SESIÓN</string>
    <string name="btnRegistrarse">REGISTRARSE</string>
    <string name="lnkOlvideContrasenia">Olvidé mi contraseña</string>
    <string name="chkRecordarme">Recordarme</string>
    <string name="lnkRegistrarse">No tenés cuenta? Registrate acá</string>
    <string name="lnkIniciarSesion">Ya tenés cuenta? Inicia sesión acá</string>

    <string name="txtNombre">Nombre</string>
    <string name="txtApellido">Apellido</string>
    <string name="txtFechaNacimiento">Fecha de nacimiento</string>
    <string name="txtDNI">DNI</string>
    <string name="txtCorreo">Correo electrónico</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtLocalidad">Localidad</string>
    <string name="txtTelefono">Teléfono</string>
    <string name="txtConfirmarContrasenia">Confirmar contraseña</string>
    <string name="txt_recibidos">Recibidos</string>
    <string name="txt_enviados">Enviados</string>
    <string name="txt_aceptados">Aceptados</string>
    <string name="txt_mistruques">Mis Trueques</string>
    <string name="item_editar">Editar</string>
    <string name="item_eliminar">Eliminar</string>

    <string name="tv_nombre_apellido_detalle">Nombre y Apellido</string>
    <string name="btn_perfil">Perfil</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_condicion">Condicion</string>
    <string name="tv_descripcion">Descripcion</string>
    <string name="tv_le_interesa">Le interesa:</string>

    <string name="sv_FiltrarArticulos">¿Que estas buscando?</string>
    <string name="tv_QueOfreces">Seleccione la publicación a ofertar</string>
    <string name="item_menu_salir">Salir</string>
</resources>