<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20sp"
            android:paddingRight="20sp">

            <TextView
                android:id="@+id/tvTruequeLibre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/concert_one"
                android:text="@string/tvTruequeLibre"
                android:textAlignment="center"
                android:textColor="#2196F3"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIngresarDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="@string/tvIniciarSesion"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input_layout"
                style="@style/txtLogin"
                android:hint="@string/txtUsuario">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                style="@style/txtLogin"
                android:hint="@string/txtContrasenia"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/txtContrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <ProgressBar
                android:id="@+id/pbLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#016EEB"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12sp"
                android:backgroundTint="#016EEB"
                android:fontFamily="@font/concert_one"
                android:onClick="btnLogin"
                android:padding="10dp"
                android:text="@string/btnLogin"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/tvRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:autoLink="all"
                android:linksClickable="false"
                android:text="@string/lnkRegistrarse"
                android:textAlignment="center"
                android:textColor="#4F92C6" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>