<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarPublicaciones">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvPublicarArticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/tv_publicar_articulo" />

        <ScrollView
            android:id="@+id/svAgregarPublicacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tvPublicarArticulo"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/btn_agregar_publicacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                tools:ignore="MissingClass">

                <TextView
                    android:id="@+id/tvImagenesAgregarPublicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/tv_imagenes_agregar_publicacion" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAgregarImagenesPublicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvImagenesAgregarPublicacion"
                    android:layout_gravity="bottom|right"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/btn_agregar_imagenes_publicacion"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/btnAgregarImagenesPublicacion"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >
                        <ImageView
                            android:id="@+id/imgvagregarpublicaciones1"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"

                            android:scaleType="centerCrop"
                            tools:srcCompat="@tools:sample/avatars" />
                        <ImageView
                            android:id="@+id/imgvagregarpublicaciones2"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"

                            android:scaleType="centerCrop"
                            tools:srcCompat="@tools:sample/avatars" />
                        <ImageView
                            android:id="@+id/imgvagregarpublicaciones3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"

                            android:scaleType="centerCrop"
                            tools:srcCompat="@tools:sample/avatars" />
                        <ImageView
                            android:id="@+id/imgvagregarpublicaciones4"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"

                            android:scaleType="centerCrop"
                            tools:srcCompat="@tools:sample/avatars" />
                        <ImageView
                            android:id="@+id/imgvagregarpublicaciones5"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"

                            android:scaleType="centerCrop"
                            tools:srcCompat="@tools:sample/avatars" />
                    </LinearLayout>
                </HorizontalScrollView>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfCategoriaAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/tv_categoria_agregar_publicacion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_below="@id/btnAgregarImagenesPublicacion">

                    <AutoCompleteTextView

                        android:id="@+id/ddCategoriaAgregarPublicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none">

                    </AutoCompleteTextView>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfTituloAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_titulo_agregar_publicacion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_below="@id/tfCategoriaAgregarPublicacion"
                    android:layout_marginTop="5dp">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTituloAgregar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfDescripcionAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_below="@id/tfTituloAgregarPublicacion"
                    android:hint="@string/tv_descripcion_agregar_publicacion"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtDescripcionAgregar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="8"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfCondicionAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_condicion_agregar_publicacion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_below="@id/tfDescripcionAgregarPublicacion"
                    android:layout_marginTop="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/ddCondicionAgregarPublicacion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        >

                    </AutoCompleteTextView>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfUbicacionAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_ubicacion_agregar_publicacion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_below="@id/tfCondicionAgregarPublicacion"
                    android:layout_marginTop="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/ddUbicacionAgregarPublicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none">

                    </AutoCompleteTextView>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfCategoriaPretendidaAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_categoria_pretendida_agregar_publicacion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_below="@id/tfUbicacionAgregarPublicacion"
                    android:layout_marginTop="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/ddCategoriaPretendidaAgregarPublicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none">

                    </AutoCompleteTextView>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfUbicacionPretendidaAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_ubicacion_pretendida_agregar_publicacion"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_below="@id/tfCategoriaPretendidaAgregarPublicacion"
                    android:layout_marginTop="5dp">

                <AutoCompleteTextView
                    android:id="@+id/ddUbicacionPretendidaAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none">

                </AutoCompleteTextView>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btnPublicarAgregarPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tfUbicacionPretendidaAgregarPublicacion"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="Publicar"
                    android:text="@string/btn_publicar_agregar_publicacion"
                    android:textAlignment="center" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>